# DM-computer-algebra

./: !!fix.txt  BTest.cpp  BackendIOWrapper.cpp  BackendIOWrapper.h  Btest.h  CMakeLists.txt  Dm-computer-algebra.pro  Frac.cpp  Frac.h  Integ.cpp  Integ.h  IntegBackendWrapper.cpp  IntegBackendWrapper.h  Manipulator.cpp  Manipulator.h  Natural.cpp  Natural.h  Natural.hpp  NaturalBackendWrapper.cpp  NaturalBackendWrapper.h  Poly.cpp  Poly.h  README.md  Test.cpp  Test.h  buttonnames.qml  computeralgebra.cpp  computeralgebra.h  computeralgebra.ui  dm-gui.pro  dm-gui.pro.user.cf37be5  fractions.qml  integer.qml  main.cpp  main.qml  natural.qml  polynoms.qml  qml.qrc
Debug/DM-compu.CF1ABD6F.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DM-computer-algebra.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build-kate-Desktop_Qt_5_14_1_MinGW_32_bit-Debug/: .qmake.stash  Makefile  qrc_qml.cpp
dm-gui/: Image.qml  dm-gui.pro  main.qml  qml.qrc
fractions/: f1.qml  f2.qml  f3.qml  f4.qml  f5.qml  f6.qml  f7.qml  f8.qml
integer/: i1.qml  i10.qml  i2.qml  i3.qml  i4.qml  i5.qml  i6.qml  i7.qml  i8.qml  i9.qml
kate/: main.qml
natural/: n1.qml  n10.qml  n11.qml  n12.qml  n13.qml  n14.qml  n2.qml  n3.qml  n4.qml  n5.qml  n6.qml  n7.qml  n8.qml  n9.qml
polynoms/: p1.qml  p10.qml  p11.qml  p12.qml  p13.qml  p2.qml  p3.qml  p4.qml  p5.qml  p6.qml  p7.qml  p8.qml  p9.qml
untitled/: Image.qml  main.qml  qml.qrc
